--- a/2D RPG Negiramen/2D RPG Negiramen/CreateMapPage.xaml
+++ b/2D RPG Negiramen/2D RPG Negiramen/CreateMapPage.xaml
@@ -2,13 +2,16 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="_2D_RPG_Negiramen.CreateMapPage"
-             Title="NewPage1">
+             Title="Create a map">
     <ScrollView>
         <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+
+            <Image
+                Source="create_map_page.png"
+                SemanticProperties.Description="map table"
+                HeightRequest="200"
+                HorizontalOptions="Center" />
+
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
