--- a/2D RPG Negiramen/2D RPG Negiramen/AppShell.xaml
+++ b/2D RPG Negiramen/2D RPG Negiramen/AppShell.xaml
@@ -12,8 +12,18 @@
         Route="MainPage" />
 
     <ShellContent
-        Title="Create a map"
-        ContentTemplate="{DataTemplate local:CreateMapPage}"
-        Route="CreateMapPage" />
+        Title="Create a map view"
+        ContentTemplate="{DataTemplate local:CreateMapViewPage}"
+        Route="CreateMapViewPage" />
+
+    <ShellContent
+        Title="Create a battle view"
+        ContentTemplate="{DataTemplate local:CreateBattleViewPage}"
+        Route="CreateBattleViewPage" />
+
+    <ShellContent
+        Title="Create a menu view"
+        ContentTemplate="{DataTemplate local:CreateMenuViewPage}"
+        Route="CreateMenuViewPage" />
 
 </Shell>
