--- a/2D RPG Negiramen/2D RPG Negiramen/MainPage.xaml
+++ b/2D RPG Negiramen/2D RPG Negiramen/MainPage.xaml
@@ -24,20 +24,22 @@
             <Grid ColumnDefinitions="*,*" RowDefinitions="*,*">
 
                 <Button Grid.Row="0" Grid.Column="0"
-                        x:Name="CreateMapBtn"
+                        x:Name="CreateMapViewBtn"
                         Text="マップを作る"
-                        SemanticProperties.Hint="Create the map"
-                        Clicked="CreateMapBtn_Clicked"/>
+                        SemanticProperties.Hint="Create the map view"
+                        Clicked="CreateMapViewBtn_Clicked"/>
 
                 <Button Grid.Row="0" Grid.Column="1"
-                        x:Name="CreateBattleBtn"
+                        x:Name="CreateBattleViewBtn"
                         Text="戦闘を作る"
-                        SemanticProperties.Hint="Create the battle" />
+                        SemanticProperties.Hint="Create the battle view"
+                        Clicked="CreateBattleBtn_Clicked"/>
 
                 <Button Grid.Row="1" Grid.Column="0"
-                        x:Name="CreateMenuBtn"
+                        x:Name="CreateMenuViewBtn"
                         Text="メニューを作る"
-                        SemanticProperties.Hint="Create the menu" />
+                        SemanticProperties.Hint="Create the menu view"
+                        Clicked="CreateMenuViewBtn_Clicked"/>
 
                 <Button Grid.Row="1" Grid.Column="1"
                         x:Name="CreateTalkBtn"
