Player character view

--- a/2D RPG Negiramen/2D RPG Negiramen/AppShell.xaml
+++ b/2D RPG Negiramen/2D RPG Negiramen/AppShell.xaml
@@ -31,4 +31,9 @@
         ContentTemplate="{DataTemplate local:CreateTalkingViewPage}"
         Route="CreateTalkingViewPage" />
 
+    <ShellContent
+        Title="Create a player character view"
+        ContentTemplate="{DataTemplate local:CreatePlayerCharacterViewPage}"
+        Route="CreatePlayerCharacterViewPage" />
+
 </Shell>
