--- a/2D RPG Negiramen/2D RPG Negiramen/CreateMonsterViewPage.xaml
+++ b/2D RPG Negiramen/2D RPG Negiramen/CreateMonsterViewPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_2D_RPG_Negiramen.CreateBattleViewPage"
+             x:Class="_2D_RPG_Negiramen.CreateMonsterViewPage"
              Title="Create a monster view">
     <ScrollView>
         <VerticalStackLayout>
@@ -21,14 +21,14 @@
                     VerticalTextAlignment="Center"/>
 
                 <Label
-                    Text="Create a battle view"
+                    Text="Create a monster view"
                     SemanticProperties.Hint="Separator"
                     VerticalTextAlignment="Center"/>
             </HorizontalStackLayout>
 
             <Image
-                Source="create_battle_view_page.png"
-                SemanticProperties.Description="battle view"
+                Source="create_monster_view_page.png"
+                SemanticProperties.Description="monster view"
                 HeightRequest="200"
                 HorizontalOptions="Center" />
 
