--- a/2D RPG Negiramen/2D RPG Negiramen/MainPage.xaml
+++ b/2D RPG Negiramen/2D RPG Negiramen/MainPage.xaml
@@ -61,13 +61,14 @@
                 <Button Grid.Row="0" Grid.Column="0"
                         x:Name="CreatePlayerCharacterBtn"
                         Text="プレイヤー・キャラクターを作る"
-                        SemanticProperties.Hint="Create the player character"
+                        SemanticProperties.Hint="Create the player character view"
                         Clicked="CreatePlayerCharacterBtn_Clicked"/>
 
                 <Button Grid.Row="0" Grid.Column="1"
                         x:Name="CreateMonsterBtn"
                         Text="モンスターを作る"
-                        SemanticProperties.Hint="Create the monster" />
+                        SemanticProperties.Hint="Create the monster view"
+                        Clicked="CreateMonsterBtn_Clicked"/>
 
                 <Button Grid.Row="1" Grid.Column="0"
                         x:Name="CreateItemBtn"
