--- a/2D RPG Negiramen/2D RPG Negiramen/EditMonsterPage.xaml
+++ b/2D RPG Negiramen/2D RPG Negiramen/EditMonsterPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_2D_RPG_Negiramen.CreatePlayerCharacterViewPage"
-             Title="Create a player character view">
+             x:Class="_2D_RPG_Negiramen.EditMonsterPage"
+             Title="Edit the monster">
     <ScrollView>
         <VerticalStackLayout>
             <!--
@@ -21,14 +21,14 @@
                     VerticalTextAlignment="Center"/>
 
                 <Label
-                    Text="Create a player character view"
+                    Text="Create a monster view"
                     SemanticProperties.Hint="Separator"
                     VerticalTextAlignment="Center"/>
             </HorizontalStackLayout>
 
             <Image
-                Source="create_player_character_view_page.png"
-                SemanticProperties.Description="player character view"
+                Source="edit_monster_page.png"
+                SemanticProperties.Description="edit the monster"
                 HeightRequest="200"
                 HorizontalOptions="Center" />
 
