--- a/2D RPG Negiramen/2D RPG Negiramen/EditPlayerCharacterPage.xaml
+++ b/2D RPG Negiramen/2D RPG Negiramen/EditPlayerCharacterPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_2D_RPG_Negiramen.CreateMonsterViewPage"
-             Title="Create a monster view">
+             x:Class="_2D_RPG_Negiramen.EditPlayerCharacterPage"
+             Title="Edit the player character">
     <ScrollView>
         <VerticalStackLayout>
             <!--
@@ -21,14 +21,14 @@
                     VerticalTextAlignment="Center"/>
 
                 <Label
-                    Text="Create a monster view"
+                    Text="Edit the player character"
                     SemanticProperties.Hint="Separator"
                     VerticalTextAlignment="Center"/>
             </HorizontalStackLayout>
 
             <Image
-                Source="create_monster_view_page.png"
-                SemanticProperties.Description="monster view"
+                Source="edit_player_character_page.png"
+                SemanticProperties.Description="edit the player character"
                 HeightRequest="200"
                 HorizontalOptions="Center" />
 
