--- a/2D RPG Negiramen/2D RPG Negiramen/Views/MapExplorerPage.xaml
+++ b/2D RPG Negiramen/2D RPG Negiramen/Views/MapExplorerPage.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_2D_RPG_Negiramen.EditMonsterPage"
-             Title="Edit the monster">
+             x:Class="_2D_RPG_Negiramen.MapExplorerPage"
+             Title="Select a map">
     <ScrollView>
         <VerticalStackLayout>
             <!--
@@ -21,8 +21,8 @@
                     VerticalTextAlignment="Center"/>
 
                 <Label
-                    Text="Edit the monster"
-                    SemanticProperties.Hint="Separator"
+                    Text="Map explorer"
+                    SemanticProperties.Hint="Select a map"
                     VerticalTextAlignment="Center"/>
             </HorizontalStackLayout>
 
@@ -31,10 +31,17 @@
                 ====
             -->
             <Image
-                Source="edit_monster_page.png"
-                SemanticProperties.Description="edit the monster"
+                Source="map_explorer_page.png"
+                SemanticProperties.Description="Select a map"
                 HeightRequest="200"
                 HorizontalOptions="Center" />
+
+            <Button Grid.Row="0" Grid.Column="0"
+                    x:Name="DoubleClickItemBtn"
+                    WidthRequest="200"
+                    Text="TODO 項目をダブルクリック"
+                    SemanticProperties.Hint="Double click the item"
+                    Clicked="DoubleClickItemBtn_Clicked"/>
 
         </VerticalStackLayout>
     </ScrollView>
