ボタンサイズ

--- a/Visual Studio/2D RPG Negiramen/Views/OverwriteProjectToUnityPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/OverwriteProjectToUnityPage.xaml
@@ -39,6 +39,7 @@
                    Placeholder="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets"/>
 
             <Button x:Name="OverwriteProjectToUnityBtn"
+                    WidthRequest="300"
                     Text="Unityへプロジェクトを上書き"
                     SemanticProperties.Hint="Overwrite project to Unity"
                     Clicked="OverwriteProjectToUnityBtn_Clicked" />
