--- a/Visual Studio/2D RPG Negiramen/Views/OverwriteProjectToUnityPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/OverwriteProjectToUnityPage.xaml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              x:Class="_2D_RPG_Negiramen.OverwriteProjectToUnityPage"
              Title="Overwrite project to Unity">
+    <ContentPage.BindingContext>
+        <viewModels:OverwriteProjectToUnityPageViewModel />
+    </ContentPage.BindingContext>
+    
     <ScrollView>
         <VerticalStackLayout>
             <!--
@@ -36,7 +41,8 @@
                     VerticalTextAlignment="Center"/>
 
             <Entry x:Name="UnityAssetsFolderPath"
-                   Placeholder="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets"/>
+                   Placeholder="C:/Users/むずでょ/Documents/Unity Projects/Negiramen Practice/Assets"
+                   Text="{Binding UnityAssetsFolderPathAsStr}"/>
 
             <Button x:Name="OverwriteProjectToUnityBtn"
                     WidthRequest="300"
