--- a/Visual Studio/2D RPG Negiramen/Views/OverwriteProjectToUnityPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/OverwriteProjectToUnityPage.xaml
@@ -48,7 +48,7 @@
                     WidthRequest="300"
                     Text="Unityへプロジェクトを上書き"
                     SemanticProperties.Hint="Overwrite project to Unity"
-                    Clicked="OverwriteProjectToUnityBtn_Clicked" />
+                    Command="{Binding DoItCommand}"/>
 
         </VerticalStackLayout>
     </ScrollView>
