--- a/Visual Studio/2D RPG Negiramen/Views/CreateMapViewPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/CreateMapViewPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_2D_RPG_Negiramen.CreateMapViewPage"
+             x:Class="_2D_RPG_Negiramen.Views.CreateMapViewPage"
              Title="Create a map">
     <ScrollView>
         <VerticalStackLayout>
