--- a/Visual Studio/2D RPG Negiramen/Views/EditItemPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/EditItemPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_2D_RPG_Negiramen.EditItemPage"
+             x:Class="_2D_RPG_Negiramen.Views.EditItemPage"
              Title="Edit a item">
     <ScrollView>
         <VerticalStackLayout>
