--- a/Visual Studio/2D RPG Negiramen/Views/StartupConfigurationPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/StartupConfigurationPage.xaml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              x:Class="_2D_RPG_Negiramen.Views.StartupConfigurationPage"
              Title="StartupConfigurationPage">
+    <ContentPage.BindingContext>
+        <viewModels:StartupConfigurationPageViewModel />
+    </ContentPage.BindingContext>
+
     <VerticalStackLayout>
         <!--
             パンくずリスト
@@ -100,6 +105,6 @@
         <Label Text="Welcome to .NET MAUI!"
                VerticalOptions="Center" 
                HorizontalOptions="Center" />
-        
+
     </VerticalStackLayout>
 </ContentPage>
