構成ファイル仕様変更

--- a/Visual Studio/2D RPG Negiramen/Views/StartupConfigurationPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/StartupConfigurationPage.xaml
@@ -69,7 +69,7 @@
                    VerticalTextAlignment="Center"/>
 
             <Entry Grid.Row="1" Grid.Column="3"
-                   Placeholder="Mr. Negiramen"
+                   Placeholder="Doujin Circle Negiramen"
                    Text="{Binding YourCircleNameAsStr}"/>
 
             <Label Grid.Row="1" Grid.Column="4"
