--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -109,6 +109,10 @@
                         Clicked="StartupConfigurationBtn_Clicked"/>
 
             </Grid>
+            
+            <Label Text="Welcome to .NET MAUI!"
+               VerticalOptions="Center" 
+               HorizontalOptions="Center" />
 
             <!--
             <Label
