--- a/Visual Studio/2D RPG Negiramen/Views/StartupConfigurationPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/StartupConfigurationPage.xaml
@@ -3,33 +3,45 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              x:Class="_2D_RPG_Negiramen.Views.StartupConfigurationPage"
-             Title="StartupConfigurationPage">
+             Title="構成">
     <ContentPage.BindingContext>
         <viewModels:StartupConfigurationPageViewModel />
     </ContentPage.BindingContext>
 
-    <VerticalStackLayout>
+    <VerticalStackLayout Margin="10,10,10,10">
         <!--
             パンくずリストはありません
             ==========================
         -->
-        <HorizontalStackLayout>
-            <Label Text="戻るボタンは、タイトルバーの左上にあります"
-                   SemanticProperties.Hint="Back button on Top Left Titile bar"
-                   VerticalTextAlignment="Center"/>
-        </HorizontalStackLayout>
 
         <!--
             本文
             ====
         -->
-        <Label Text="Unity プロジェクトを先に作っておいてください。&#10;そのあと、以下のフォルダ―を設定してください"
-               SemanticProperties.Hint="Separator"
-               VerticalTextAlignment="Center"/>
-
-        <Grid RowDefinitions="*,*" ColumnDefinitions="20,4*,20,2*,20,2*,20,*">
+        <Grid RowDefinitions="*,*" ColumnDefinitions="20,*" Margin="10,10,10,10">
             <Label Grid.Row="0" Grid.Column="1"
-                   Text="Unity プロジェクトの 📂 `Assets` フォルダーへのパス"
+                   Text="Negiramen レポジトリ―からコピーした Workspace フォルダーへの、あなたのローカルＰＣ上でのパス"
+                   SemanticProperties.Hint="Separator"
+                   VerticalTextAlignment="Center"/>
+
+            <Label Grid.Row="1" Grid.Column="0"
+                   Text="📂"
+                   SemanticProperties.Hint="Folder"
+                   HorizontalTextAlignment="Center"
+                   VerticalTextAlignment="Center"/>
+
+            <Entry Grid.Row="1" Grid.Column="1"
+                   Placeholder="C:\Users/むずでょ/Documents/GitHub\2D-RPG-Negiramen/Workspace"
+                   Text="{Binding NegiramenWorkspaceFolderPathAsStr}"/>
+        </Grid>
+
+        <!--
+            本文
+            ====
+        -->
+        <Grid RowDefinitions="*,*" ColumnDefinitions="20,4*,20,2*,20,2*,20,*" Margin="10,10,10,10">
+            <Label Grid.Row="0" Grid.Column="1"
+                   Text="Unity プロジェクトを先に作っておいてください。&#10;その中の Unity プロジェクトの Assets フォルダーへのパス"
                    SemanticProperties.Hint="Separator"
                    VerticalTextAlignment="Center"/>
 
@@ -91,8 +103,7 @@
                    VerticalTextAlignment="Center"/>
         </Grid>
 
-
-        <Button WidthRequest="300"
+        <Button Margin="10,10,10,10" WidthRequest="300"
                 Text="Unity の Assets フォルダ―へ初期設定をコピー"
                 SemanticProperties.Hint="Overwrite project to Unity"
                 Command="{Binding PushStartupToUnityAssetsFolderCommand}"/>
