Change directory name from "Negiramen" to "Auto Generated"

--- a/Visual Studio/2D RPG Negiramen/Views/StartupConfigurationPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/StartupConfigurationPage.xaml
@@ -97,7 +97,7 @@
                    VerticalTextAlignment="Center"/>
 
             <Label Grid.Row="1" Grid.Column="7"
-                   Text="Negiramen"
+                   Text="Auto Generated"
                    SemanticProperties.Hint="Fixed folder name"
                    HorizontalTextAlignment="Start"
                    VerticalTextAlignment="Center"/>
