--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -95,7 +95,7 @@
                 FontSize="32"
                 HorizontalOptions="Center" />
 
-            <Grid ColumnDefinitions="*,*" RowDefinitions="*">
+            <Grid ColumnDefinitions="*,*" RowDefinitions="*,*">
 
                 <Button Grid.Row="0" Grid.Column="0"
                         Text="初期設定"
@@ -107,6 +107,10 @@
                         SemanticProperties.Hint="Test show window"
                         Clicked="TestShowWindowButton_Clicked"/>
 
+                <Button Grid.Row="1" Grid.Column="0"
+                        Text="タイル・パレット表示"
+                        SemanticProperties.Hint="Popup tile pallette"
+                        Clicked="PopupTilePaletteButton_Clicked"/>
             </Grid>
             
             <Label Text="Welcome to .NET MAUI!"
