--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -108,9 +108,14 @@
                         Clicked="TestShowWindowButton_Clicked"/>
 
                 <Button Grid.Row="1" Grid.Column="0"
-                        Text="タイル・パレット表示"
+                        Text="ポップアップ練習"
                         SemanticProperties.Hint="Popup tile pallette"
-                        Clicked="PopupTilePaletteButton_Clicked"/>
+                        Clicked="PopupPracticeButton_Clicked"/>
+
+                <Button Grid.Row="1" Grid.Column="1"
+                        Text="タイル・パレット表示"
+                        SemanticProperties.Hint="Show tile pallette"
+                        Clicked="ShowTilePalette_Clicked"/>
             </Grid>
             
             <Label Text="Welcome to .NET MAUI!"
